hphp/test/zend/bad/ext/gd/tests/imagegammacorrect_error4.php
<?php
$image = imagecreatetruecolor(180, 30);
$gamma = imagegammacorrect($image, 1, 'string');

?>